--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -1,6 +1,5 @@
 {
-  "TEST": "Test",
-  "REGESTER_USER": "Register user",
+  "REGISTER_USER": "Register user",
   "MACHINES": "Machines",
   "ADD_EAT": "Add eat",
   "LOGOUT": "Logout",
