--- a/client/src/assets/i18n/ua.json
+++ b/client/src/assets/i18n/ua.json
@@ -1,6 +1,5 @@
 {
-  "TEST": "Тест",
-  "REGESTER_USER": "Зареєструвати користувачів",
+  "REGISTER_USER": "Зареєструвати користувачів",
   "MACHINES": "Автомати",
   "ADD_EAT": "Додати їжу",
   "LOGOUT": "Вийти",
