--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -32,5 +32,6 @@
   "MACHINE_ID": "Machine Id",
   "FULL_PRICE": "Full price",
   "CONTAINER": "Container",
-  "SELECT_EAT": "Select eat"
+  "SELECT_EAT": "Select eat",
+  "NAME": "Name"
 }
