--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -33,5 +33,8 @@
   "FULL_PRICE": "Full price",
   "CONTAINER": "Container",
   "SELECT_EAT": "Select eat",
-  "NAME": "Name"
+  "NAME": "Name",
+  "RESTAURANTS": "Restaurants",
+  "ADD_RESTAURANTS": "Add restaurant",
+  "COUNTRY": "Country"
 }
