--- a/client/src/assets/i18n/ua.json
+++ b/client/src/assets/i18n/ua.json
@@ -33,5 +33,8 @@
   "FULL_PRICE": "Повна ціна",
   "CONTAINER": "Контейнер",
   "SELECT_EAT": "Оберіть їжу",
-  "NAME": "Ім'я"
+  "NAME": "Ім'я",
+  "RESTAURANTS": "Заклади",
+  "ADD_RESTAURANTS": "Додати заклад",
+  "COUNTRY": "Країна"
 }
